gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail19898a.d
version https://git-lfs.github.com/spec/v1
oid sha256:0ea7f8384de9d03cf7c79bd6a5fbffd0e0930df197ae0f0ec9c147cdd36d7634
size 254
